package edu.fiuba.algo3.model.interactuable;

import edu.fiuba.algo3.model.Gladiador;
import edu.fiuba.algo3.model.tablero.Camino;

public interface Interactuable {

    void interactuarCon(Gladiador gladiador, Camino camino);
}
